--- a/Sam's Web Portfolio/style.css
+++ b/Sam's Web Portfolio/style.css
@@ -179,7 +179,7 @@ main {
 }
 
 /* Social Media Section */
-.social-media {
+/* .social-media {
   text-align: center;
   padding: 40px 20px;
 }
@@ -187,7 +187,7 @@ main {
 .h1-social-media {
   font-size: 2rem;
   margin-bottom: 20px;
-}
+} */
 
 /* .insta,
 .twitter,
